# mtsGalilControoler

./: CMakeLists.txt  package.xml
code/: GalilControllerInterface.cpp  main.cpp  mtsGalilController.cpp  mtsGalilControllerDR.cpp
core/: CMakeLists.txt
core/components/: CMakeLists.txt  package.xml
core/components/cmake/: Findgclib.cmake
core/components/code/: mtsGalilController-Old.cpp  mtsGalilController.cpp  mtsGalilControllerDR.cpp  sawGalilControllerConfig.cdg  saw_galil_configuration.cdg
core/components/include/sawGalilController/: mtsGalilController-Old.h  mtsGalilController.h  mtsGalilControllerDR.h
core/examples/: CMakeLists.txt
core/examples/ConsoleQt/: main.cpp
core/examples/ConsoleTest/: CMakeLists.txt  main.cpp  package.xml
core/examples/python/: galil_robot.py
core/share/: package.xml
core/share/galil-controller/: EyeRobot3.json  FlashXYZ.json  demo-controller.json
examples/ConsoleTest/: CMakeLists.txt  main.cpp
include/mtsGalilController/: GalilControllerInterface.h  mtsGalilController.h
include/sawGalilController/: mtsGalilController.h  mtsGalilControllerDR.h
ros/: package.xml
ros/python/galil_controller/: controller.py
ros/scripts/: galil_read.py
ros/src/: galil_controller.cpp
share/: CMakeLists.txt  package.xml
share/galil-controller/: demo-controller.json
