<package>
  <name>mts_galil_controller</name>
  <version>2.0.0</version>
  <description>
  mtsGalilController
  </description>
  <maintainer email="dlezcan1@jhu.edu">Dimitri Lezcano</maintainer>
  <license>cisst</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>cisst_msgs</build_depend>
  <build_depend>cisst_ros_bridge</build_depend>
  <build_depend>cisst</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>cisst_msgs</run_depend>
  <run_depend>cisst_ros_bridge</run_depend>
  <run_depend>cisst</run_depend>

  <export>
    <build_type>catkin</build_type>
  </export>

</package>