<?xml version="1.0"?>
<package>
  <name>sawGalilController_config</name>
  <version>2.2.1</version>
  <description>mtsGalilController config files</description>

  <maintainer email="dlezcan1@jhu.edu">Dimitri Lezcano</maintainer>

  <license>cisst</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
